WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27282
[V8] Cleanup exception handling in worker evaluation code.
https://bugs.webkit.org/show_bug.cgi?id=27282
Summary
[V8] Cleanup exception handling in worker evaluation code.
Jian Li
Reported
2009-07-14 17:30:20 PDT
Implement the corresponding V8 changes to deal with the problem that workers with syntax errors not firing error event.
Attachments
Proposed Patch
(6.66 KB, patch)
2009-07-14 17:37 PDT
,
Jian Li
no flags
Details
Formatted Diff
Diff
Proposed Patch
(6.06 KB, patch)
2009-07-20 15:27 PDT
,
Jian Li
abarth
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2009-07-14 17:37:42 PDT
Created
attachment 32752
[details]
Proposed Patch
Jian Li
Comment 2
2009-07-20 15:27:37 PDT
Created
attachment 33115
[details]
Proposed Patch
Adam Barth
Comment 3
2009-07-23 23:09:03 PDT
Comment on
attachment 33115
[details]
Proposed Patch This looks good. Is there any behavior change we can test?
Jian Li
Comment 4
2009-07-24 09:59:31 PDT
(In reply to
comment #3
)
> (From update of
attachment 33115
[details]
) > This looks good. Is there any behavior change we can test?
The tests are in worker-constructor.html (see patch for
bug 27525
). This layout test worker-constructor.html will be re-enabled in Chrome until all WebKit patches are landed.
Jian Li
Comment 5
2009-07-24 11:03:01 PDT
Committed as
http://trac.webkit.org/changeset/46365
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug