2009-07-24  Jian Li  <jianli@chromium.org>

Reviewed by Adam Barth.

        [V8] Cleanup exception handling in worker evaluation code.
        https://bugs.webkit.org/show_bug.cgi?id=27282

        * bindings/v8/WorkerContextExecutionProxy.cpp:
        (WebCore::WorkerContextExecutionProxy::evaluate):
        * bindings/v8/WorkerContextExecutionProxy.h:
        (WebCore::WorkerContextExecutionState::WorkerContextExecutionState):
        * bindings/v8/WorkerScriptController.cpp:
        (WebCore::WorkerScriptController::evaluate):
        (WebCore::WorkerScriptController::setException):

Canonical link: https://commits.webkit.org/37975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46365 268f45cc-cd09-0410-ab3c-d52691b4dbfc